Otp api completed
